# C_library

./: CMakeLists.txt  Doxyfile  README.md  build.sh
conversions/: CMakeLists.txt  README.md  integer_to_string.c  integer_to_string.h  integer_to_string_tests.c  string_to_integer.c  string_to_integer.h  string_to_integer_tests.c
dynamic_array/: CMakeLists.txt  README.md  dynamic_array.c  dynamic_array.h  dynamic_array_interface.h  dynamic_array_interface_impl.c  dynamic_array_tests.c  dynamic_string.c  dynamic_string.h  static_pool.h
fat_pointer/: README.md  fat_pointer.c  fat_pointer.h  fat_pointer_runtime_tests.c  fat_pointer_tests.c
includes/: Boolean_type.h  README.md  allocator_type.h  constexpr_int.h  inline_or_static.h  iterator_type.h  macro_alignof.h  macro_concatenate.h  macro_stringify.h  macro_typeof.h  reference_type_emulation.h  sizeof_array.h  static_assert.h  string_reference.h
io/: CMakeLists.txt  keyboard_input.c  keyboard_input.h  keyboard_input_test.c  keyboard_input_test2.c  sleep.c  sleep.h
programs/: binary_viewer.c  byte_writer.c  evaluate_expression.c
safer_integer/: CMakeLists.txt  README.md  debug_mode_integer.c  safer_integer.c  safer_integer_comparison.h  safer_integer_math.c  safer_integer_math.h  safer_integer_math_tests.c  safer_integer_type.h  safer_integer_type_tests.h
simple_tokenizer/: README.md  simple_tokenizer.c
terminal_text_color/: README.md  terminal_text_color.c  terminal_text_color.h
tests/: CMakeLists.txt  iterator_tests.c
timer/: CMakeLists.txt  README.md  timer.c  timer.h  timer_tests.c
unit_testing/: README.md  unit_testing.c  unit_testing.h  unit_testing_example.c
